; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/adb/extr_adb_mouse.c_ams_close.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/adb/extr_adb_mouse.c_ams_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdev = type { i32 }
%struct.thread = type { i32 }
%struct.adb_mouse_softc = type { i32, i32 }

@PZERO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cdev*, i32, i32, %struct.thread*)* @ams_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ams_close(%struct.cdev* %0, i32 %1, i32 %2, %struct.thread* %3) #0 {
  %5 = alloca %struct.cdev*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.thread*, align 8
  %9 = alloca %struct.adb_mouse_softc*, align 8
  store %struct.cdev* %0, %struct.cdev** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.thread* %3, %struct.thread** %8, align 8
  %10 = load %struct.cdev*, %struct.cdev** %5, align 8
  %11 = call %struct.adb_mouse_softc* @CDEV_GET_SOFTC(%struct.cdev* %10)
  store %struct.adb_mouse_softc* %11, %struct.adb_mouse_softc** %9, align 8
  %12 = load %struct.adb_mouse_softc*, %struct.adb_mouse_softc** %9, align 8
  %13 = getelementptr inbounds %struct.adb_mouse_softc, %struct.adb_mouse_softc* %12, i32 0, i32 1
  %14 = call i32 @cv_broadcast(i32* %13)
  %15 = load %struct.adb_mouse_softc*, %struct.adb_mouse_softc** %9, align 8
  %16 = getelementptr inbounds %struct.adb_mouse_softc, %struct.adb_mouse_softc* %15, i32 0, i32 0
  %17 = load i32, i32* @PZERO, align 4
  %18 = call i32 @selwakeuppri(i32* %16, i32 %17)
  ret i32 0
}

declare dso_local %struct.adb_mouse_softc* @CDEV_GET_SOFTC(%struct.cdev*) #1

declare dso_local i32 @cv_broadcast(i32*) #1

declare dso_local i32 @selwakeuppri(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
